[fix] wrong wrapped element

--- a/css_components/global/navbar.css
+++ b/css_components/global/navbar.css
@@ -55,12 +55,16 @@
         box-shadow: 0 0 0 4px rgba(0, 0, 0, .10);
         background-color: white;
         flex-direction: column;
-        padding: .5rem 1.3rem;
         align-items: start;
         width: 120vw;
         height: 100vh;
         left: -20px;
-        gap: 1rem;
+        gap: 0;
+    }
+
+    .nav-links-wrapper ul a {
+        width: 100%;
+        padding: .5rem .5rem .5rem 1.3rem;
     }
 
     .nav-links-wrapper ul.show-nav-menu {
